fixed colors on dark mode (i.e., buttons + backgrounds)

--- a/spotifywrapped/static/main.css
+++ b/spotifywrapped/static/main.css
@@ -419,7 +419,7 @@ body.dark-mode .navbar a {
 }
 
 body.dark-mode .navbar a:hover {
-    color: var(--primary-green) !important; /* Light green hover color for navbar links */
+    color: #8692b5 !important; /* Light purple hover color for navbar links */
 }
 
 body.dark-mode .container,
@@ -445,7 +445,7 @@ body.dark-mode .btn {
 }
 
 body.dark-mode .btn:hover {
-    background-color: var(--primary-green-dark) !important; /* Darker hover color for buttons */
+    background-color: #8692b5 !important; /* Darker hover color for buttons */
 }
 
 /* Modal dark mode */
@@ -461,6 +461,7 @@ body.dark-mode .modal-body {
     border-top: 1px solid var(--shadow-dark);
     border-bottom: 1px solid var(--shadow-dark);
 }
+
 
 /* Modal buttons */
 .modal-footer .btn {
